commit translated contents

--- a/articles/cognitive-services/Content-Moderator/toc.yml
+++ b/articles/cognitive-services/Content-Moderator/toc.yml
@@ -28,7 +28,7 @@ items:
     href: ecommerce-retail-catalog-moderation.md
   - name: Moderera Facebook-innehåll
     href: facebook-post-moderation.md
-  - name: Video- och avskriftsmoderering
+  - name: Moderering av videor och avskrifter
     href: video-transcript-moderation-review-tutorial-dotnet.md
 - name: Begrepp
   items:
@@ -38,80 +38,60 @@ items:
     href: text-moderation-api.md
   - name: Videomoderering
     href: video-moderation-human-review.md
-  - name: Jobb och granskningar
+  - name: Granskningsverktyg
+    href: Review-Tool-User-Guide/human-in-the-loop.md
+  - name: Granskningar, arbetsflöden och jobb
     href: review-api.md
-  - name: Arbetsflöden
-    href: workflow-api.md
 - name: Instruktionsguider
   items:
-  - name: Använda modereringstjänsterna
+  - name: Moderera innehåll
     items:
-    - name: API:er för moderering
+    - name: REST-API
       items:
-      - name: Använda .NET SDK
-        items:
-        - name: Kontrollera videoinnehåll
-          href: video-moderation-api.md
-        - name: Kontrollera avbildningar mot anpassade listor
-          href: image-lists-quickstart-dotnet.md
-        - name: Kontrollera text mot anpassade termer
-          href: term-lists-quickstart-dotnet.md
-      - name: Använda REST API:er
-        items:
-        - name: Avbildningar – API-konsol
-          href: try-image-api.md
-        - name: Anpassade avbildningar – API-konsol
-          href: try-image-list-api.md
-        - name: Text – API-konsol
-          href: try-text-api.md
-        - name: Anpassade villkor – API-konsol
-          href: try-terms-list-api.md
-  - name: Använda granskningsverktyget
+      - name: Avbildningar – API-konsol
+        href: try-image-api.md
+      - name: Anpassade avbildningar – API-konsol
+        href: try-image-list-api.md
+      - name: Text – API-konsol
+        href: try-text-api.md
+      - name: Anpassade villkor – API-konsol
+        href: try-terms-list-api.md
+    - name: .NET SDK
+      items:
+      - name: Kontrollera videoinnehåll
+        href: video-moderation-api.md
+      - name: Kontrollera avbildningar mot anpassade listor
+        href: image-lists-quickstart-dotnet.md
+      - name: Kontrollera text mot anpassade termer
+        href: term-lists-quickstart-dotnet.md
+  - name: Definiera och använda granskningar
     items:
-    - name: Omdömes-API:er
-      items:
-      - name: Använda .NET SDK
-        items:
-        - name: Jobb – .NET
-          href: moderation-jobs-quickstart-dotnet.md
-        - name: Omdömen – .NET
-          href: moderation-reviews-quickstart-dotnet.md
-        - name: Videoomdömen – .NET
-          href: video-reviews-quickstart-dotnet.md
-        - name: Avskriftsomdömen för videor – .NET
-          href: video-transcript-reviews-quickstart-dotnet.md
-      - name: Använda REST API:er
-        items:
-        - name: Jobb – API-konsol
-          href: try-review-api-job.md
-        - name: Omdömen – API-konsol
-          href: try-review-api-review.md
-        - name: Arbetsflöden – API-konsol
-          href: try-review-api-workflow.md
-    - name: Översikt över granskningsverktyget
-      href: Review-Tool-User-Guide/human-in-the-loop.md
-    - name: Inställningar för granskningsverktyget
-      href: Review-Tool-User-Guide/Configure.md
-    - name: Hantera team
-      href: Review-Tool-User-Guide/SubTeams.md
-    - name: Använd taggar
-      href: Review-Tool-User-Guide/Tags.md
-    - name: Granska bilder
+    - name: Granskningsverktyg (webbläsare)
       href: Review-Tool-User-Guide/Review-Moderated-Images.md
-    - name: Granska text
-      href: Review-Tool-User-Guide/Text-Reviews.md
-    - name: Hantera autentiseringsuppgifter
-      href: Review-Tool-User-Guide/Credentials.md
-    - name: Använd anslutningsappar
-      href: Review-Tool-User-Guide/Connectors.md
-    - name: Använd arbetsflöden
+    - name: REST-API
+      href: try-review-api-review.md
+    - name: .NET SDK
+      href: moderation-reviews-quickstart-dotnet.md
+    - name: Videogranskningar (.NET)
+      href: video-reviews-quickstart-dotnet.md
+    - name: Granskningar av videoavskrift (.NET)
+      href: video-transcript-reviews-quickstart-dotnet.md
+  - name: Definiera och använda arbetsflöden
+    items:
+    - name: Granskningsverktyg (webbläsare)
       href: Review-Tool-User-Guide/Workflows.md
-    - name: Visa instrumentpanel
-      href: Review-Tool-User-Guide/View-Dashboard.md
+    - name: REST-API
+      href: try-review-api-workflow.md
+  - name: Definiera och använda jobb
+    items:
+    - name: REST-API
+      href: try-review-api-job.md
+    - name: .NET SDK
+      href: moderation-jobs-quickstart-dotnet.md
+  - name: Konfigurera granskningsverktyget
+    href: Review-Tool-User-Guide/Configure.md
   - name: Exportera eller ta bort kontodata
     href: ./export-delete-data.md
-  - name: Azure-webbseminarserie
-    href: https://info.microsoft.com/cognitive-services-content-moderator-ondemand.html
 - name: Referens
   items:
   - name: API för Content Moderator
@@ -142,6 +122,8 @@ items:
       href: samples-rest.md
     - name: Andra Azure-exempel
       href: https://azure.microsoft.com/resources/samples/?service=cognitive-services&term=content+moderator
+  - name: Azure-webbseminarserie
+    href: https://info.microsoft.com/cognitive-services-content-moderator-ondemand.html
   - name: VANLIGA FRÅGOR OCH SVAR
     href: FAQs.md
   - name: Priser och begränsningar
@@ -158,9 +140,9 @@ items:
     href: https://azure.microsoft.com/global-infrastructure/services/
   - name: Azure-översikt
     href: https://azure.microsoft.com/global-infrastructure/services/?products=cognitive-services
-ms.openlocfilehash: cee9e6c585dfa65ccee5c0f4631b5efc81dde760
-ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
+ms.openlocfilehash: 8948caa31d1fa464f13295a4dd4c1174b88543f5
+ms.sourcegitcommit: 563f8240f045620b13f9a9a3ebfe0ff10d6787a2
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/18/2019
-ms.locfileid: "57900717"
+ms.lasthandoff: 04/01/2019
+ms.locfileid: "58758155"
