--- a/articles/iot-accelerators/toc.yml
+++ b/articles/iot-accelerators/toc.yml
@@ -128,29 +128,64 @@ items:
       href: https://github.com/Azure/azure-iot-pcs-remote-monitoring-java
     - name: Vanliga frågor och svar om fjärrövervakning
       href: iot-accelerators-faq-rm-v2.md
-- name: Ansluten fabrik
+- name: Branschanpassat IoT
   items:
   - name: Översikt
-    href: iot-accelerators-connected-factory-features.md
     items:
-    - name: Arkitektur
-      href: iot-accelerators-connected-factory-sample-walkthrough.md
+    - name: Vad är branschanpassat IoT
+      href: overview-iot-industrial.md
+    - name: OPC-tvilling
+      items:
+      - name: Vad är OPC-tvilling
+        href: overview-opc-twin.md
+      - name: Arkitektur för OPC-tvilling
+        href: overview-opc-twin-architecture.md
+    - name: OPC-valv
+      items:
+      - name: Vad är OPC-valv
+        href: overview-opc-vault.md
+    - name: Ansluten fabrik
+      items:
+      - name: Översikt över ansluten fabrik
+        href: iot-accelerators-connected-factory-features.md
+      - name: Arkitektur för ansluten fabrik
+        href: iot-accelerators-connected-factory-sample-walkthrough.md
   - name: Snabbstarter
     items:
     - name: Testa en lösning för ansluten fabrik
       href: quickstart-connected-factory-deploy.md
   - name: Instruktionsguider
     items:
-    - name: Använd instrumentpanelen
-      href: iot-accelerators-connected-factory-dashboard.md
-    - name: Distribuera en gateway
-      href: iot-accelerators-connected-factory-gateway-deployment.md
-    - name: Använd OPC-utgivaren
-      href: https://github.com/Azure/iot-edge-opc-publisher/blob/master/README.md
-    - name: Konfigurera lösningsacceleratorn
-      href: iot-accelerators-connected-factory-configure.md
-    - name: Anpassa lösningsacceleratorn
-      href: iot-accelerators-connected-factory-customize.md
+    - name: Ansluten fabrik
+      items:
+      - name: Använd instrumentpanelen
+        href: iot-accelerators-connected-factory-dashboard.md
+      - name: Distribuera en gateway
+        href: iot-accelerators-connected-factory-gateway-deployment.md
+      - name: Använd OPC-utgivaren
+        href: https://github.com/Azure/iot-edge-opc-publisher/blob/master/README.md
+      - name: Konfigurera lösningsacceleratorn
+        href: iot-accelerators-connected-factory-configure.md
+      - name: Anpassa lösningsacceleratorn
+        href: iot-accelerators-connected-factory-customize.md
+    - name: OPC-tvilling
+      items:
+      - name: Distribuera tjänster för OPC-tvilling
+        href: howto-opc-twin-deploy-existing.md
+      - name: Distribuera en modul för OPC-tvilling till IoT Edge
+        href: howto-opc-twin-deploy-modules.md
+      - name: Distribuera endast beroenden för OPC-tvilling
+        href: howto-opc-twin-deploy-dependencies.md
+    - name: OPC-valv
+      items:
+      - name: Distribuera OPC-valv till ett befintligt projekt
+        items:
+        - name: Säker kommunikation för OPC-klienten och OPC PLC
+          href: howto-opc-vault-deploy-existing-client-plc-communication.md
+        - name: Säker OPC UA-klient och säkert OPC UA-serverprogram
+          href: howto-opc-vault-deploy-existing-client-server-communication.md
+      - name: Distribuera OPC-valvet från grunden
+        href: howto-opc-vault-deploy-scratch.md
   - name: Resurser
     items:
     - name: GitHub-lagringsplats
@@ -257,9 +292,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-iot-suite
   - name: Fjärrövervakning V1
     href: https://docs.microsoft.com/previous-versions/azure/iot-suite/
-ms.openlocfilehash: 5b2067facd27e94735aba63bb1c54c15e1511c64
-ms.sourcegitcommit: 8b41b86841456deea26b0941e8ae3fcdb2d5c1e1
+ms.openlocfilehash: 02c728f7acef1bcc1436d87dd0c0d9509db8ec97
+ms.sourcegitcommit: 563f8240f045620b13f9a9a3ebfe0ff10d6787a2
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/05/2019
-ms.locfileid: "57342045"
+ms.lasthandoff: 04/01/2019
+ms.locfileid: "58757192"
