--- a/articles/asc-for-iot/index.yml
+++ b/articles/asc-for-iot/index.yml
@@ -1,15 +1,15 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: fad8ecd0658b2a00f249e8b218bab1dbdaf83187
-ms.sourcegitcommit: c63fe69fd624752d04661f56d52ad9d8693e9d56
+ms.openlocfilehash: 6a2d2825e382a6cda8a1fc04fd223e700cf8d284
+ms.sourcegitcommit: 563f8240f045620b13f9a9a3ebfe0ff10d6787a2
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/28/2019
-ms.locfileid: "58578228"
+ms.lasthandoff: 04/01/2019
+ms.locfileid: "58757329"
 documentType: LandingData
-title: Dokumentation om förhandsversionen av ASC för IoT
+title: Dokumentation om förhandsversionen av Azure Security Center för IoT
 metadata:
-  title: Dokumentation om förhandsversionen av ASC för IoT – självstudier, snabbstarter | Microsoft Docs
-  meta.description: ASC for IoT unifies your security management and enables advanced threat protection across your IoT solution.
+  title: Dokumentation om förhandsversionen av Azure Security Center för IoT – självstudier, snabbstarter | Microsoft Docs
+  meta.description: Azure Security Center for IoT unifies your security management and enables advanced threat protection across your IoT solution.
   services: ascforiot
   author: mlottner
   manager: barbkess
@@ -20,7 +20,7 @@ metadata:
   ms.date: 03/26/19
   ms.author: barbkess
 abstract:
-  description: Använd förhandsversionen av ASC för IoT för att utöka din befintliga cybersäkerhet till hela IoT-lösningen. Få en verklig panoramavy över säkerheten för alla dina Azure-relaterade resurser. Alternativ för snabb distribution och fullständig integrering med IoT Hub-modultvillingar ger dig en mängd olika anpassningsalternativ och enkel integrering med dina nuvarande hanteringsverktyg. 
+  description: Använd förhandsversionen av Azure Security Center (ASC) för IoT för att utöka din befintliga cybersäkerhet till hela IoT-lösningen. Få en verklig panoramavy över säkerheten för alla dina Azure-relaterade resurser. Alternativ för snabb distribution och fullständig integrering med IoT Hub-modultvillingar ger dig en mängd olika anpassningsalternativ och enkel integrering med dina nuvarande hanteringsverktyg. 
 sections:
 - title: Snabbstarter på 5 minuter
   items:
