--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -298,6 +298,8 @@ items:
             href: app/snapshot-debugger-appservice.md
           - name: Aktivera Snapshot Debugger för andra miljöer
             href: app/snapshot-debugger-vm.md
+          - name: Uppgradera Snapshot Debugger
+            href: app/snapshot-debugger-upgrade.md
           - name: Felsökning för Snapshot Debugger
             href: app/snapshot-debugger-troubleshoot.md
         - name: Diagnostik
@@ -825,6 +827,14 @@ items:
           href: platform/alerts-managing-alert-states.md
         - name: Hantera aviseringar från andra övervakningstjänster
           href: platform/alerts-managing-nagios-zabbix-scom.md
+      - name: Migrera klassiska aviseringar
+        items:
+        - name: Använda migreringsverktyget
+          href: platform/alerts-using-migration-tool.md
+        - name: Förbereda för migreringen
+          href: platform/alerts-prepare-migration.md
+        - name: Lär dig migreringsverktyget
+          href: platform/alerts-understand-migration.md
     - name: Automatisk skalning
       items:
       - name: Genomgång av automatisk skalning
@@ -1046,9 +1056,9 @@ items:
     href: https://stackoverflow.com/search?q=monitoring
   - name: Kodexempel
     href: https://azure.microsoft.com/resources/samples/?service=monitor
-ms.openlocfilehash: c0ef35bb91ec796e818f7b263ffe171789d986ba
-ms.sourcegitcommit: c63fe69fd624752d04661f56d52ad9d8693e9d56
+ms.openlocfilehash: 48ea888b5c21bc2c689d93684b4dbae7eaee1ed8
+ms.sourcegitcommit: 956749f17569a55bcafba95aef9abcbb345eb929
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/28/2019
-ms.locfileid: "58577066"
+ms.lasthandoff: 03/29/2019
+ms.locfileid: "58629422"
