--- a/articles/hdinsight/hadoop/TOC.yml
+++ b/articles/hdinsight/hadoop/TOC.yml
@@ -29,6 +29,9 @@ items:
   - name: Skapa kluster på begäran
     href: ../hdinsight-hadoop-create-linux-clusters-adf.md
     maintainContext: true
+  - name: Övervaka klustertillgänglighet med Ambari- och Azure Monitor-loggar
+    href: ../hdinsight-cluster-availability.md
+    maintainContext: true
 - name: Begrepp
   items:
   - name: Kapacitetsplanering för kluster
@@ -414,6 +417,9 @@ items:
     maintainContext: true
   - name: Nätverksåtkomst
     items:
+    - name: Arkitektur för virtuellt HDInsight-nätverk
+      href: ../hdinsight-virtual-network-architecture.md
+      maintainContext: true
     - name: HDInsight i ett virtuellt Azure-nätverk
       href: ../hdinsight-extend-hadoop-virtual-network.md
       maintainContext: true
@@ -488,9 +494,9 @@ items:
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: 3dfbd1844f463efa9d99aa39dde86391ec773408
-ms.sourcegitcommit: f0f21b9b6f2b820bd3736f4ec5c04b65bdbf4236
+ms.openlocfilehash: 21390f78e30bf6d26b98b0d7ab9d3f005d5fbf77
+ms.sourcegitcommit: 563f8240f045620b13f9a9a3ebfe0ff10d6787a2
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/26/2019
-ms.locfileid: "58449396"
+ms.lasthandoff: 04/01/2019
+ms.locfileid: "58758445"
