--- a/articles/hdinsight/spark/TOC.yml
+++ b/articles/hdinsight/spark/TOC.yml
@@ -36,6 +36,8 @@ items:
     href: apache-spark-ipython-notebook-machine-learning.md
   - name: Skapa en Apache Spark-app i IntelliJ
     href: apache-spark-create-standalone-application.md
+  - name: Övervaka klustertillgänglighet med Ambari och Azure Monitor-loggar
+    href: ../hdinsight-cluster-availability.md
 - name: Gör så här för att
   items:
   - name: Använda klusterlagring
@@ -440,9 +442,9 @@ items:
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: f2a818ce9777cd28b844f584cb272ab01bce2753
-ms.sourcegitcommit: f0f21b9b6f2b820bd3736f4ec5c04b65bdbf4236
+ms.openlocfilehash: 9775c1da15b5ac5e675e84487006339b1c9701ce
+ms.sourcegitcommit: c6dc9abb30c75629ef88b833655c2d1e78609b89
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/26/2019
-ms.locfileid: "58448783"
+ms.lasthandoff: 03/29/2019
+ms.locfileid: "58670178"
