--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -54,7 +54,19 @@ items:
 - name: Självstudier
   items:
   - name: Meddelanderoutning
-    href: tutorial-routing.md
+    items:
+    - name: Del 1 – Konfigurera meddelanderoutning
+      items:
+      - name: Portalen
+        href: tutorial-routing.md
+      - name: Azure RM-mall
+        href: tutorial-routing-config-message-routing-RM-template.md
+      - name: Azure CLI
+        href: tutorial-routing-config-message-routing-CLI.md
+      - name: PowerShell
+        href: tutorial-routing-config-message-routing-PowerShell.md
+    - name: Del 2 – Visa resultat för meddelanderoutning
+      href: tutorial-routing-view-message-routing-results.md
   - name: Använd mått och diagnostikloggar
     href: tutorial-use-metrics-and-diags.md
   - name: Utför manuell redundans
@@ -445,9 +457,9 @@ items:
     href: https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=iot-hub
-ms.openlocfilehash: 3bde9a6b9abcb5b99224ae9397756fe410cc0708
-ms.sourcegitcommit: d89b679d20ad45d224fd7d010496c52345f10c96
+ms.openlocfilehash: 1360a16f6b8fe786eb933de991e45f9f6d0ce825
+ms.sourcegitcommit: 956749f17569a55bcafba95aef9abcbb345eb929
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/12/2019
-ms.locfileid: "57791876"
+ms.lasthandoff: 03/29/2019
+ms.locfileid: "58630740"
