--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -191,6 +191,8 @@ items:
     items:
     - name: Hantera skrivskyddade repliker på Azure-portalen
       href: howto-read-replicas-portal.md
+    - name: Hantera skrivskyddade repliker i Azure CLI
+      href: howto-read-replicas-cli.md
 - name: Referens
   items:
   - name: Azure CLI
@@ -241,9 +243,9 @@ items:
     href: partners-migration-postgresql.md
   - name: Guide för databasmigrering
     href: https://datamigration.microsoft.com/
-ms.openlocfilehash: 8e4f8c68e591f1ad8d26c4bd11bc2307c88c10c6
-ms.sourcegitcommit: f8c592ebaad4a5fc45710dadc0e5c4480d122d6f
+ms.openlocfilehash: 5958953a879a84a3a0b78b91ca276ad4bf48fc00
+ms.sourcegitcommit: 956749f17569a55bcafba95aef9abcbb345eb929
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 03/29/2019
-ms.locfileid: "58620962"
+ms.locfileid: "58629198"
