--- a/articles/governance/policy/index.yml
+++ b/articles/governance/policy/index.yml
@@ -1,12 +1,12 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: e389eb01faff93c0e45c66cded41e94ac3730715
-ms.sourcegitcommit: 12d67f9e4956bb30e7ca55209dd15d51a692d4f6
+ms.openlocfilehash: cf5eeff9aa56a2c3366c57ddef47f4020e73c161
+ms.sourcegitcommit: 3341598aebf02bf45a2393c06b136f8627c2a7b8
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/20/2019
-ms.locfileid: "58226036"
+ms.lasthandoff: 04/01/2019
+ms.locfileid: "58804657"
 documentType: LandingData
-title: Dokumentation om Azure Policy
+title: Dokumentation om Azure Policy-tjänsten
 metadata:
   title: Dokumentation om Azure Policy – självstudier, API-referens
   description: Med Azure Policy kan du hantera och förebygga IT-problem med principdefinitioner som framtvingar regler och effekter för dina resurser. Med Azure Policy blir resurserna kompatibla med företagets standarder och serviceavtal.
